logs/lemon-metadata.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/django_sitesutils-0.1.2.egg-info'...
Listing './lib/python3.5/site-packages/lemon_metadata-0.1.5.egg-info'...
Listing './lib/python3.5/site-packages/metadata'...
Listing './lib/python3.5/site-packages/metadata/locale'...
Listing './lib/python3.5/site-packages/metadata/locale/ru'...
Listing './lib/python3.5/site-packages/metadata/locale/ru/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/metadata/management'...
Listing './lib/python3.5/site-packages/metadata/management/commands'...
Compiling './lib/python3.5/site-packages/metadata/management/commands/sync_metadata.py'...
***   File "./lib/python3.5/site-packages/metadata/management/commands/sync_metadata.py", line 16
    print 'Starting metadata synchronisation with all registered models.'
                                                                        ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/metadata/migrations'...
Listing './lib/python3.5/site-packages/metadata/templates'...
Listing './lib/python3.5/site-packages/metadata/templates/metadata'...
Listing './lib/python3.5/site-packages/metadata/templates/metadata/admin'...
Listing './lib/python3.5/site-packages/metadata/templatetags'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/sitesutils'...
Listing './share'...
Listing './share/python-wheels'...
